--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,13 @@
 # See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
 
 # dependencies
-/node_modules
+web/node_modules
+web/package-lock.json
+
+server/node_modules
+server/package-lock.json
+
+
 /.pnp
 .pnp.js
 
