--- a/.gitignore
+++ b/.gitignore
@@ -1,10 +1,10 @@
 # See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
 
 # dependencies
-web/node_modules
+web/node_modules/
 web/package-lock.json
 
-server/node_modules
+server/node_modules/
 server/package-lock.json
 
 
